Fixing spacing after numbering of exercises in section exercises.

--- a/css/ccap-precalculus.css
+++ b/css/ccap-precalculus.css
@@ -1647,6 +1647,7 @@ a {
 .section.section-exercises .exercise > .title {
   content: counter(exercise) ".";
   float: left;
+  padding-right: .5em;
 }
 .section.section-exercises .exercise .problem {
   text-indent: 1em;
